[gd_scene load_steps=2 format=3 uid="uid://b2enik8bjmhw5"]

[ext_resource type="Script" path="res://enemies/common/VisionCone.gd" id="1_r5f5e"]

[node name="VisionCone" type="Node2D"]
script = ExtResource("1_r5f5e")
range = 500.0
degree = 90.0

[node name="Raycast" type="RayCast2D" parent="."]
unique_name_in_owner = true

[node name="Area2D" type="Area2D" parent="."]

[node name="Collision" type="CollisionPolygon2D" parent="Area2D"]
unique_name_in_owner = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
